--- a/VkMusic.Sync/VkMusic.Sync.csproj
+++ b/VkMusic.Sync/VkMusic.Sync.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="VkNet, Version=1.0.18.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\..\GitHubVisualStudio\VkMusic\VkMusic\packages\VkNet.1.0.18\lib\net40\VkNet.dll</HintPath>
+      <HintPath>..\packages\VkNet.1.0.18\lib\net40\VkNet.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
