--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,19 +8,25 @@ environment:
     secure: 4SaOAuPeMLZX3CqGt954jt6ZpvUtS8cJH
   COVERITY_TOKEN:
     secure: cOQx9LUnBljbelw1-nBXDA
-install:
-- cmd: set PATH=C:\Program Files (x86)\MSBuild\14.0\Bin;%PATH%
-- ps: .\build.environment.ps1
-- ps: psake .\build.tasks.ps1 appveyor-install
-build_script:
-- ps: psake .\build.tasks.ps1 appveyor-build
-test_script:
-- ps: psake .\build.tasks.ps1 appveyor-test
+
+before_build:
+  - ps: >-
+      $env:path="C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\CommonExtensions\Microsoft\TestWindow;C:\Program Files (x86)\Microsoft SDKs\F#\4.0\Framework\v4.0\;C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.1;C:\Program Files (x86)\MSBuild\14.0\bin;C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\IDE\;C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\BIN;C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\Tools;C:\Windows\Microsoft.NET\Framework\v4.0.30319;C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\VCPackages;C:\Program Files (x86)\HTML Help Workshop;C:\Program Files (x86)\Microsoft Visual Studio 14.0\Team Tools\Performance Tools;C:\Program Files (x86)\Windows Kits\8.1\bin\x86;C:\Program Files (x86)\Microsoft SDKs\Windows\v8.1A\bin\NETFX 4.5.1 Tools\;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Program Files (x86)\Windows Kits\8.1\Windows Performance Toolkit\;C:\Program Files\Microsoft SQL Server\120\Tools\Binn\;C:\Program Files (x86)\Microsoft SDKs\TypeScript\1.1\;$env:path"
+  - nuget restore VkMusic.sln
 
 build:
   project: VkMusic.sln
   parallel: true
-  verbosity: minimal
-  
-before_build:
-  - nuget restore VkMusic.sln
+  verbosity: minimal  
+
+test_script:
+- ps: >-
+    vstest.console.exe /inIsolation /Enablecodecoverage /TestAdapterPath:".\packages\xunit.runner.visualstudio.2.0.1\build\_common\" .\VkMusic.UnitTestProject\bin\Release\VkMusic.UnitTestProject.dll /Settings:CodeCoverage.runsettings
+    $coverageFilePath = Resolve-Path -path "TestResults\*\*.coverage"
+    $coverageFilePath = $coverageFilePath.ToString()
+    if(Test-Path .\coverage.coveragexml){ rm .\coverage.coveragexml }
+    ."C:\Program Files (x86)\Microsoft Visual Studio 12.0\Team Tools\Dynamic Code Coverage Tools\CodeCoverage.exe" analyze /output:coverage.coveragexml "$coverageFilePath"
+    Push-AppveyorArtifact coverage.coveragexml
+    $coveralls = (Resolve-Path "src/packages/coveralls.net.*/tools/csmacnz.coveralls.exe").ToString()
+    & $coveralls --dynamiccodecoverage -i coverage.coveragexml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID --useRelativePaths -o cov.json
+    Push-AppveyorArtifact cov.json
