--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ build:
 
 test_script:
 - ps: >-
-    vstest.console.exe /inIsolation /Enablecodecoverage /TestAdapterPath:".\packages\xunit.runner.visualstudio.2.0.1\build\_common\" .\VkMusic.UnitTestProject\bin\Release\VkMusic.UnitTestProject.dll /Settings:CodeCoverage.runsettings
+    vstest.console.exe /inIsolation /Enablecodecoverage /TestAdapterPath:".\packages\xunit.runner.visualstudio.*\build\_common\" .\VkMusic.UnitTestProject\bin\Release\VkMusic.UnitTestProject.dll /Settings:CodeCoverage.runsettings
 
     $coverageFilePath = Resolve-Path -path "TestResults\*\*.coverage"
 
