--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,17 +23,19 @@ test_script:
 - ps: >-
     vstest.console.exe /inIsolation /Enablecodecoverage /TestAdapterPath:".\packages\xunit.runner.visualstudio.2.1.0\build\_common\" .\VkMusic.UnitTestProject\bin\Release\VkMusic.UnitTestProject.dll /Settings:CodeCoverage.runsettings
 
+    $coverageFilePath = Resolve-Path -path "TestResults\*\*.coverage"
+    
     $coverageFilePath = "TestResults\*\*.coverage"
 
     if(Test-Path .\coverage.coveragexml){ rm .\coverage.coveragexml }
-
+  
+    Push-AppveyorArtifact coverage.coveragexml
+    
     ."C:\Program Files (x86)\Microsoft Visual Studio 12.0\Team Tools\Dynamic Code Coverage Tools\CodeCoverage.exe" analyze /output:coverage.coveragexml "$coverageFilePath"
 
     $coveralls = (Resolve-Path "packages/coveralls.net.*/tools/csmacnz.coveralls.exe").ToString()
 
     & $coveralls --dynamiccodecoverage -i ./coverage.coveragexml --repoToken $env:COVERALLS_REPO_TOKEN --commitId $env:APPVEYOR_REPO_COMMIT --commitBranch $env:APPVEYOR_REPO_BRANCH --commitAuthor $env:APPVEYOR_REPO_COMMIT_AUTHOR --commitEmail $env:APPVEYOR_REPO_COMMIT_AUTHOR_EMAIL --commitMessage $env:APPVEYOR_REPO_COMMIT_MESSAGE --jobId $env:APPVEYOR_JOB_ID --useRelativePaths -o cov.json
-
-    Push-AppveyorArtifact coverage.coveragexml
 
     Push-AppveyorArtifact cov.json
 
