--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 version: 1.0.{build}
-configuration: Debug
+configuration: Release
 platform: Any CPU
 
 environment:
@@ -20,7 +20,7 @@ build:
 
 test_script:
 - ps: >-
-    vstest.console.exe /inIsolation /Enablecodecoverage /TestAdapterPath:".\packages\xunit.runner.visualstudio.2.1.0\build\_common\" .\VkMusic.UnitTestProject\bin\Debug\VkMusic.UnitTestProject.dll /Settings:CodeCoverage.runsettings
+    vstest.console.exe /inIsolation /Enablecodecoverage /TestAdapterPath:".\packages\xunit.runner.visualstudio.2.1.0\build\_common\" .\VkMusic.UnitTestProject\bin\Release\VkMusic.UnitTestProject.dll /Settings:CodeCoverage.runsettings
 
     $coverageFilePath = Resolve-Path -path "TestResults\*\*.coverage"
     
